; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/efi/libstub/extr_fdt.c_fdt_update_cell_size.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/efi/libstub/extr_fdt.c_fdt_update_cell_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"#address-cells\00", align 1
@EFI_DT_ADDR_CELLS_DEFAULT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"#size-cells\00", align 1
@EFI_DT_SIZE_CELLS_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @fdt_update_cell_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fdt_update_cell_size(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @fdt_path_offset(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %7, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @EFI_DT_ADDR_CELLS_DEFAULT, align 4
  %11 = call i32 @fdt_setprop_u32(i8* %8, i32 %9, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @EFI_DT_SIZE_CELLS_DEFAULT, align 4
  %15 = call i32 @fdt_setprop_u32(i8* %12, i32 %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %14)
  ret void
}

declare dso_local i32 @fdt_path_offset(i8*, i8*) #1

declare dso_local i32 @fdt_setprop_u32(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
